fix(mobile): avoid to use scss variable on mobile devices
this needs to not use variable otherwise it will yield error as the file is being loaded previous to bootstrap

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -32,7 +32,7 @@
   border: none;
 
   .navigation-toggle {
-    border-radius: $border-radius;
+    border-radius: 0.25rem;
     margin: 0;
   }
 
